# lambda-benchmark

./: .gitignore  Cargo.toml  README.md  check.ps1  check.sh  frontend-e715e384ab170e58.js  frontend-e715e384ab170e58_bg.wasm  index.html  parameters.yaml  parameters.yml
.github/workflows/: backend.yml  backing.yml  build.yml  code.yml  desktop.yml  frontend.yml  pages.yml  runtimes.yml  stack.yml  tools.yml
cfn-gen/: Cargo.toml
cfn-gen/src/: main.rs
cfn_gen/: Cargo.toml
cfn_gen/src/: main.rs
front_end/: Cargo.toml  build.ps1  build.sh  rust-toolchain
front_end/assets/: sw.js
front_end/src/: app.rs  main.rs
frontend/: Cargo.toml  check.ps1  check.sh  index.html
frontend/assets/: manifest.json
frontend/src/: app.rs  lib.rs  main.rs  temp.rs
log-processor/: Cargo.toml
log-processor/src/: main.rs
log_processor/: Cargo.toml
log_processor/src/: main.rs
num-to-array/: Cargo.toml
num-to-array/src/: main.rs
report-generator/: Cargo.toml
report-generator/src/: main.rs
report_generator/: Cargo.toml
report_generator/src/: main.rs
runtimes/dotnet6/: build.sh  manifest.yaml  manifest.yml
runtimes/dotnet6/src/: Function.cs  aws-lambda-tools-defaults.json
runtimes/nodejs18x/: build.sh  index.js  manifest.yml
runtimes/python311/: build.sh  index.py  manifest.yml
runtimes/rust/: Cargo.toml  Dockerfile  build.sh  manifest.yml
runtimes/rust/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  log.rs  s3.rs
