[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.23"
eframe = { version = "0.23", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rust_decimal = { version = "1", features = ["serde"] }
egui_plot = "0.23"

## REMOVE
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
