[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.23"
eframe = { version = "0.23", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
egui_plot = "0.23"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
