[package]
name = "log-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9"
aws-config = "0.56"
aws-sdk-lambda = "0.33"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
