[package]
name = "log-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4"] }
regex = "1.9"
chrono = "0.4"
bytes = "1.5"
aws-config = "0.56"
aws-smithy-http = "0.56"
aws-sdk-cloudwatchlogs = "0.33"
aws-sdk-s3 = "0.33"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
