[package]
name = "log_processor"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
shared = { path = "../shared" }
lambda_runtime = "0.8"
aws_lambda_events = { version = "0.11", default-features = false, features = ["cloudwatch_logs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1.0"
regex = "1.9"
aws-config = "0.56"
aws-smithy-http = "0.56"
aws-sdk-s3 = "0.33"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
