[package]
name = "report_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
lambda_runtime = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json"] }
anyhow = "1.0"
rust_decimal = { version = "1", features = ["serde"] }
aws-config = "0.56"
aws-smithy-http = "0.56"
aws-sdk-s3 = "0.33"
chrono = "0.4"
futures = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
